# tinkoff_fintech

course_project/: Dockerfile  Makefile  README.md  database.db  pyproject.toml  setup.cfg
course_project/app/: app.py  build_and_hire.py  database.py  fight.py  guild.py  new_user.py  profile.py  schemas.py  thread_func.py
course_project/tests/: conftest.py  test_app.py  test_build_and_hire.py  test_fight.py  test_guild.py  test_guild_send_rf.py  test_guild_transfer_ls.py  test_new_user.py  test_profile.py  test_schemas.py
homework1/: README.md  main.py  requirements.txt
homework2/: .gitignore  README.md  pyproject.toml
homework2/app/: __main__.py  parse.py  relevance.py
homework2/tests/: test_main.py
homework3/: Makefile  pyproject.toml  setup.cfg
homework3/app/: app.py
homework3/app/templates/: base.html
homework3/tests/: test_app.py
homework4/: Makefile  README.md  database.db  pyproject.toml  setup.cfg
homework4/app/: __main__.py  config.py  datab.py  functions.py  views.py
homework4/app/templates/: auth.html  base.html  home.html  sell.html  shop.html
homework4/tests/: test_app.py
homework5/: Makefile  README.md  pyproject.toml
homework5/app/: database.py  functions.py  main.py  schemas.py  sort_keys.py
homework5/tests/: test_app.py
homework6/: Makefile  README.md  docker-compose.yml  pyproject.toml
homework6/app/: app.py  func.py  schemas.py
homework6/tests/: test_app.py
homework6/tests/images/: chevrolet_original.txt  chevrolet_x32.txt  chevrolet_x64.txt
homework7/: Makefile  README.md  docker-compose.yml  dump.rdb  pyproject.toml  setup.cfg
homework7/app/: app.py  connections.py  html.py  redis.py  setup.py
homework7/tests/: conftest.py  test_connection.py  test_endpoints.py  test_redis.py
