[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["silverfatt <silvestr.fat@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
requests = "^2.27.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
autoflake = "^1.4"
isort = "^5.10.1"
black = "^22.1.0"
flake8 = "^4.0.1"
freezegun = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
